html page finished

--- a/style.css
+++ b/style.css
@@ -1,10 +1,127 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
+/* VARIABLES */
+:root {
+    --header-height:4rem;
+    --dark-color: hrl(0,0%,10%);
+    --body-color:hrl(0,0%,85%);
+    --section-color:linear-gradiant(135deg,hrl(0,0%,70%),hsl(0,0%,50));
+    --container-color:linear-gradiant(135deg,hrl(0,0%,80%),hsl(0,0%,50));
+    --hover-color:linear-gradiant(90deg,hsl(0,0%,100%),hsl(0,0%,100%),hsl(0,0%,80%))
+    --white-color:hsl(0,0%,100%);
+
+    --body-font-family: hsl('poppins', 'sans-serif');
+    --biggest-font-size: 4rem;
+    --h1-font-size:3rem;
+    --h2-font-size:2rem;
+    --h3-font-size:1.5rem;
+    --normal-font-size:1rem;
+    --small-font-size:0.9rem;
+    --tiny-font-size:0.75rem;
+
+
+    --font-regular:400;
+    --font-medium:500;
+    --font-semi:600;
+    --font-bold:700;
+
+    --mb-0-5:0.5rem;
+    --mb-0-75:0.75rem;
+    --mb-1:1rem;
+    --mb-2:2rem;
+    --mb-2-5:2.5rem;
+    --mb-3:3rem;
+
 }
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+@media(max-width:992px){
+    :root{
+        --biggest-font-size:2.5rem;
+        --h1-font-size:2.2rem;
+        --h2-font-size:2.5rem;
+        --h3-font-size:1rem;
+        --normal-font-size:0.85rem;
+        --tiny-font-size:0.7;
+
+
+    }
+}
+
+/* @@@@@@@@@@@@@@@@ BASE @@@@@@@@@@@@@@@@@@@@@ */
+*,
+::after,
+::before{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    list-style: none;
+    scroll-behavior: smooth;
+
+}
+body{
+    font-family: var(--body-font-family);
+    font-size: var(--normal-font-size);
+
+    background: hsl(0, 0%,85%);
+    color: var(--dark-color);
+}
+main{
+    overflow: hidden;
+
+}
+
+h1,h2,h3,h4{
+    font-size: var(--font-bold);
+}
+img{
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
+button,input{
+    font-family: var(--body-font-family);
+    font-size: var(--normal-font-size);
+    font-weight: var(--font-medium);
+    border:none;
+    outline: none;
+
+}
+
+button{
+    cursor:pointer;
+
+}
+
+
+/* ################ CSS REUSABLE CLASSES ###################### */
+
+.container{
+    max-width: 1140px;
+    margin: 0 auto;
+    width : calc(100% - 3rem);
+}
+
+.section{
+    padding:5rem 0 2rem;
+}
+.section-title{
+    text-align: center;
+    font-size: var(--h2-font-size);
+    margin-bottom: var(--mb-3);
+    text-transform: uppercase;
+    position: relative;
+}
+.section-title::after{
+    position: absolute;
+    content: '';
+width: 60%;
+height: 3px;
+top: -0.5rem;
+left: 0;
+right: 0;
+margin: auto;
+background-color: var(--dark-color);
+
 }
